# calangoflux_agentic_os

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
admin-dashboard/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
admin-dashboard/src/: App.tsx  index.css  vite-env.d.ts
admin-dashboard/src/api/: client.ts
admin-dashboard/src/auth/: AuthContext.tsx  LoginPage.tsx  ProtectedRoute.tsx
admin-dashboard/src/components/: AccessControlEditor.tsx  AgentCard.tsx  AgentDashboard.tsx  AuditTrail.tsx  CalangoBot.tsx  ChatMessage.tsx  ConfigPanel.tsx  KillSwitch.tsx  LeadCard.tsx  LeadsManager.tsx
calango-vallum/: Cargo.toml  Dockerfile
calango-vallum/src/: access_control.rs  chain.rs  healer.rs  lib.rs  main.rs  pipeline.rs  shield.rs  spear.rs
infra/: README.md
infra/cloud-run/: admin-dashboard.yaml  calango-vallum.yaml  ironclaw.yaml  openclaw.yaml  picoclaw.yaml
infra/supabase/: README.md  seed.sql
infra/supabase/migrations/: 001_create_audit_entries.sql  002_create_leads.sql  003_create_conversations.sql  004_create_agent_config.sql  005_create_access_control_matrix.sql
infra/terraform/: .gitignore  artifact-registry.tf  main.tf  memorystore.tf  outputs.tf  secret-manager.tf  terraform.tfvars.example  variables.tf  vpc.tf
ironclaw/: .dockerignore  Cargo.toml  Dockerfile
ironclaw/src/: access_control.rs  agent_registry.rs  api_gateway.rs  credential_vault.rs  lib.rs  logging.rs  main.rs  message_bus.rs  sandbox.rs  types.rs
openclaw/: .dockerignore  Dockerfile  package-lock.json  package.json
openclaw/src/: action-executor.test.ts  action-executor.ts  deploy-manager.test.ts  deploy-manager.ts  gemini-client.test.ts  gemini-client.ts  index.ts  lead-detector.test.ts  lead-detector.ts  logger.test.ts  logger.ts  metrics.test.ts  metrics.ts  pipeline.ts
openclaw/src/tools/: files.ts  (+8 more)
picoclaw/: .dockerignore  Dockerfile  go.mod  main.go
picoclaw/balancer/: balancer.go  balancer_test.go
picoclaw/logger/: logger.go
picoclaw/router/: router.go  router_test.go
shared/proto/: README.md  agents.proto  gateway.proto  redis-streams-schema.md
