[workspace]
members = [
    "ironclaw",
    "calango-vallum",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/catitodev/calangoflux_agentic_os"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
