[package]
name = "calango-vallum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CalangoFlux Agentic OS — Security Module (SHIELD, SPEAR, CHAIN, HEALER agents)"

[[bin]]
name = "calango-vallum"
path = "src/main.rs"

[lib]
name = "calango_vallum"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
async-trait = "0.1"
axum = "0.8"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
